<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMenuLateral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client"/>

        <Button
            android:id="@+id/btnOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"/>

        <Button
            android:id="@+id/btnMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/materials"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_lateral"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_lateral_cabecalho"
        app:menu="@menu/menu_lateral">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>